--- a/css/galdieri.css
+++ b/css/galdieri.css
@@ -419,7 +419,7 @@
   background-color: #0000;
   flex: 0 auto;
   grid-template-rows: auto auto auto auto auto;
-  grid-template-columns: .75fr .75fr .5fr;
+  grid-template-columns: .75fr .5fr .5fr;
   grid-auto-flow: row;
   align-self: center;
   place-items: center;
@@ -800,6 +800,11 @@
   position: relative;
   transform: translate(0);
   box-shadow: 5px 5px 12px 5px #0003;
+}
+
+.nota-no-italic {
+  font-size: 13px;
+  font-style: normal;
 }
 
 @media screen and (max-width: 991px) {
